# disfake

./: .gitignore  .libcst.codemod.yaml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pyright.yaml  setup.yaml  test.yaml
.github/workflows/setup/: action.yaml
disfake/: __init__.py  base.py  guild.py  state.py  user.py
disfake/core/: cache.py  generator.py  snowflake.py
disfake/gateway/: events.py  promotors.py
disfake/http/: guild.py  user.py
docs/: conf.py  core.rst  gateway.rst  http.rst  index.rst  promotors.rst  requirements.txt
scripts/: autotyping.py
tests/: test_basic_models.py  test_coherence.py  test_disfake.py  test_gateway_events.py  test_snowflake.py
