[tool.poetry]
name = "disfake"
version = "0.1.0"
description = "Module to assist in creating fake discord objects for testing purposes."
authors = ["teaishealthy <teaishealthy@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord-typings = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pyright = "^1.1.256"
autotyping = "^22.9.0"
pre-commit = "^2.19.0"

pytest = "^7.1.2"
pytest-cov = "^4.0.0"
typeguard = "^2.13.3"


[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
include = ["disfake"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
